@@ -17,21 +17,23 @@ public class HabrCareerParse {
     public static final String SUFFIX = "&q=Java%20developer&type=all";
 
     public static void main(String[] args) throws IOException {
-        int pageNumber = 1;
-        String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
-        Connection connection = Jsoup.connect(fullLink);
-        Document document = connection.get();
-        Elements rows = document.select(".vacancy-card__inner");
-        rows.forEach(row -> {
-            Element titleElement = row.select(".vacancy-card__title").first();
-            Element timeElement = row.select(".vacancy-card__date").first();
-            Element linkElement = titleElement.child(0);
-            Element timeLinkElement = timeElement.child(0);
-            HabrCareerDateTimeParser parser = new HabrCareerDateTimeParser();
-            LocalDateTime localDateTime = parser.parse(timeLinkElement.attr("datetime"));
-            String vacancyName = titleElement.text();
-            String link = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
-            System.out.printf("%s %s %s%n", vacancyName, link, localDateTime);
-        });
+        int pageNumber = 5;
+        for (int i = 0; i < pageNumber; i++) {
+            String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
+            Connection connection = Jsoup.connect(fullLink);
+            Document document = connection.get();
+            Elements rows = document.select(".vacancy-card__inner");
+            rows.forEach(row -> {
+                Element titleElement = row.select(".vacancy-card__title").first();
+                Element timeElement = row.select(".vacancy-card__date").first();
+                Element linkElement = titleElement.child(0);
+                Element timeLinkElement = timeElement.child(0);
+                HabrCareerDateTimeParser parser = new HabrCareerDateTimeParser();
+                LocalDateTime localDateTime = parser.parse(timeLinkElement.attr("datetime"));
+                String vacancyName = titleElement.text();
+                String link = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
+                System.out.printf("%s %s %s%n", vacancyName, link, localDateTime);
+            });
+        }
     }
 }
